--- a/index.html
+++ b/index.html
@@ -115,12 +115,12 @@
         <!-- Header -->
         <header id="header" class="fixed top-0 left-0 right-0 z-50 transition-all duration-300 bg-transparent">
             <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
-                <a href="#" class="text-2xl font-bold text-white">FEED<span class="text-blue-500">Master</span></a>
+                <a href="index.html" class="text-2xl font-bold text-white">FEED<span class="text-blue-500">Master</span></a>
                 <div class="hidden md:flex items-center space-x-8">
                     <a href="#services" class="nav-link text-gray-300 transition-colors">Servicios</a>
                     <a href="#pricing" class="nav-link text-gray-300 transition-colors">Planes</a>
                     <a href="#testimonials" class="nav-link text-gray-300 transition-colors">Testimonios</a>
-                    <a href="#free-trial"
+                    <a href="https://wa.me/5492615551234?text=Hola,%20me%20interesa%20el%20servicio%20de%20Community%20Management"
                         class="bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 px-4 rounded-lg transition-transform hover:scale-105">Prueba
                         Gratuita</a>
                 </div>
@@ -139,7 +139,7 @@
                 <a href="#pricing" class="block text-center py-3 px-4 text-sm text-white hover:bg-blue-600">Planes</a>
                 <a href="#testimonials"
                     class="block text-center py-3 px-4 text-sm text-white hover:bg-blue-600">Testimonios</a>
-                <a href="#free-trial"
+                <a href="https://wa.me/5492615551234?text=Hola,%20me%20interesa%20el%20servicio%20de%20Community%20Management"
                     class="block text-center py-4 px-4 text-sm text-white bg-blue-600 hover:bg-blue-700">Prueba
                     Gratuita</a>
             </div>
@@ -162,7 +162,7 @@
                     style="transition-delay: 0.2s;">
                     Estrategias de marketing y community management que convierten seguidores en clientes leales.
                 </p>
-                <a href="#free-trial"
+                <a href="https://wa.me/5492615551234?text=Hola,%20me%20interesa%20el%20servicio%20de%20Community%20Management"
                     class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-8 rounded-full text-lg transition-transform hover:scale-105 inline-block animate-on-scroll zoom-in"
                     style="transition-delay: 0.4s;">
                     Comienza tu Prueba Gratuita
@@ -412,7 +412,7 @@
                         Pruébanos durante 7 días sin compromiso. Descubre cómo podemos ayudarte a alcanzar tus objetivos
                         de marketing digital.
                     </p>
-                    <a href="#"
+                    <a href="https://wa.me/5492615551234?text=Hola,%20me%20interesa%20el%20servicio%20de%20Community%20Management"
                         class="mt-8 bg-white hover:bg-gray-200 text-blue-600 font-bold py-3 px-8 rounded-full text-lg transition-transform hover:scale-105 inline-block">
                         Solicitar mi Prueba Gratuita
                     </a>
@@ -547,3 +547,4 @@
 </body>
 
 </html>
+
